@@ -1,5 +1,6 @@
 Changes for 1.7.4
 
+ - [DEV-137] removed "IF NOT EXISTS" clauses from Sqlite DB schema (Alexei)
  - [ZBX-1395] fixed map elements highlighting option (Aly)
  - [ZBX-1396] fixes in map element selection (Aly)
  - [ZBX-1394] fixed compilation of checks_db.c with enabled iODBC (Sasha)
